--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
           <section id="home">
             <img src="images/main_bg.png" class="bg_pc" alt="main bg" />
             <img src="images/main_bg_minpc.png" class="bg_minpc" alt="main bg" />
+            <img src="images/main_bg_tablet.png" class="bg_tablet" alt="main bg" />
+            <img src="images/main_bg_m.png" class="bg_mobile" alt="main bg" />
             <!-- HOME BUTTON -->
             <h1 class="myname">
               <a href="index.html">JISUN KIM</a>
@@ -181,18 +183,9 @@
                         <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
                         <div class="krispykremebg"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list">
-                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_m"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
                       </div>
                       <div id="krispykreme" class="mobile_list">
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
@@ -207,18 +200,9 @@
                         <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
                         <div class="krispykremebg"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list">
-                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_m"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
                       </div>
                       <div id="krispykreme" class="mobile_list">
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
@@ -233,18 +217,9 @@
                         <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
                         <div class="krispykremebg"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list">
-                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_m"></div>
-                      </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
                       </div>
                       <div id="krispykreme" class="mobile_list">
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
@@ -259,6 +234,10 @@
                         <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
                         <div class="krispykremebg"></div>
                       </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
                       <div id="krispykreme" class="mobile_list">
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
@@ -271,6 +250,61 @@
                       <div id="krispykreme" class="pc_list">
                         <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
                         <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list">
+                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m"></div>
+                      </div>
+                      <h3 class="brandname">KRISPYKREME</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="sub_krispykreme.html">
+                      <div id="krispykreme" class="pc_list">
+                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
+                        <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list">
+                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m"></div>
+                      </div>
+                      <h3 class="brandname">KRISPYKREME</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="sub_krispykreme.html">
+                      <div id="krispykreme" class="pc_list">
+                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
+                        <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list">
+                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m"></div>
+                      </div>
+                      <h3 class="brandname">KRISPYKREME</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="sub_krispykreme.html">
+                      <div id="krispykreme" class="pc_list">
+                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
+                        <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
                       </div>
                       <div id="krispykreme" class="mobile_list">
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
@@ -317,7 +351,11 @@
                       패스트캠퍼스 프론트엔드 과정 수료
                     </li>
                     <li>HTML &sdot; CSS &sdot; JavaScript &sdot; jQuery &sdot; Photoshop &sdot; Illust &sdot; Adobe XD &sdot; Lightroom &sdot; After Effects</li>
-                    <li>010 3307 7591&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;jisunny302&commat;naver.com</li>
+                    <li class="answer_normal">010 3307 7591&nbsp;&nbsp;jisunny302&commat;naver.com</li>
+                    <li class="answer_mobile">
+                      010 3307 7591<br />
+                      jisunny302&commat;naver.com
+                    </li>
                   </ul>
                 </div>
               </div>
