Mobile ver Update

--- a/index.html
+++ b/index.html
@@ -191,22 +191,9 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
-                      </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <div id="krispykreme" class="mobile_list">
-                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_m"></div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
                       </div>
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
@@ -225,22 +212,9 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
-                      </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <div id="krispykreme" class="mobile_list">
-                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_m"></div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
                       </div>
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
@@ -259,22 +233,9 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <h3 class="brandname">KRISPYKREME</h3>
-                    </a>
-                  </li>
-                  <li>
-                    <a target="_blank" href="sub_krispykreme.html">
-                      <div id="krispykreme" class="pc_list">
-                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
-                        <div class="krispykremebg"></div>
-                      </div>
-                      <div id="krispykreme" class="tablet_list">
-                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_t"></div>
-                      </div>
-                      <div id="krispykreme" class="mobile_list">
-                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
-                        <div class="krispykremebg_m"></div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
                       </div>
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
@@ -293,6 +254,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
+                      </div>
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -310,9 +275,77 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
+                      </div>
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
+                  <li>
+                    <a target="_blank" href="sub_krispykreme.html">
+                      <div id="krispykreme" class="pc_list">
+                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
+                        <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list">
+                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
+                      </div>
+                      <h3 class="brandname">KRISPYKREME</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="sub_krispykreme.html">
+                      <div id="krispykreme" class="pc_list">
+                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
+                        <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list">
+                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
+                      </div>
+                      <h3 class="brandname">KRISPYKREME</h3>
+                    </a>
+                  </li>
+                  <li>
+                    <a target="_blank" href="sub_krispykreme.html">
+                      <div id="krispykreme" class="pc_list">
+                        <img src="images/krispykreme_hover.png" alt="krispykreme logo" />
+                        <div class="krispykremebg"></div>
+                      </div>
+                      <div id="krispykreme" class="tablet_list">
+                        <img src="images/krispykreme_hover_t.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_t"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list">
+                        <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m"></div>
+                      </div>
+                      <div id="krispykreme" class="mobile_list_min">
+                        <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
+                        <div class="krispykremebg_m_min"></div>
+                      </div>
+                      <h3 class="brandname">KRISPYKREME</h3>
+                    </a>
+                  </li>
+
                 </ul>
               </div>
             </div>
