--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="format-detection" content="telephone=no" />
   <title>김지선의 포트폴리오</title>
 
   <!-- 오픈 그래프(The Open Graph protocol) -->
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Jisun's Protfolio" />
-  <meta property="og:title" content="Jisun's Protfolio" />
+  <meta property="og:site_name" content="Jisun's Portfolio" />
+  <meta property="og:title" content="Jisun's Portfolio" />
   <meta property="og:description" content="안녕하세요. 감각적인 디자이너 김지선입니다." />
   <meta property="og:image" content="./images/portfolio_seo.jpg" />
   <meta property="og:url" content="#" />
 
   <!-- 트위터 카드(Twitter Cards) -->
   <meta property="twitter:card" content="summary" />
-  <meta property="twitter:site" content="Jisun's Protfolio" />
-  <meta property="twitter:title" content="Jisun's Protfolio" />
+  <meta property="twitter:site" content="Jisun's Portfolio" />
+  <meta property="twitter:title" content="Jisun's Portfolio" />
   <meta property="twitter:description" content="안녕하세요. 감각적인 디자이너 김지선입니다." />
   <meta property="twitter:image" content="./images/portfolio_seo.jpg" />
   <meta property="twitter:url" content="#" />
@@ -90,6 +91,10 @@
     <input id="toggle" type="checkbox" />
     <nav id="main_nav_wrap">
       <!-- 메인메뉴 -->
+      <!-- HOME BUTTON -->
+      <h1 class="myname nav_logo">
+        <a href="index.html">JISUN KIM</a>
+      </h1>
       <ul id="main_nav">
         <li>
           <h3>
@@ -191,10 +196,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -212,10 +217,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -233,10 +238,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -254,10 +259,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -275,10 +280,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -296,10 +301,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -317,10 +322,10 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
@@ -338,13 +343,14 @@
                         <img src="images/krispykreme_hover_m.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m"></div>
                       </div>
-                      <div id="krispykreme" class="mobile_list_min">
+                      <!-- <div id="krispykreme" class="mobile_list_min">
                         <img src="images/krispykreme_hover_m_min.png" alt="krispykreme logo" />
                         <div class="krispykremebg_m_min"></div>
-                      </div>
+                      </div> -->
                       <h3 class="brandname">KRISPYKREME</h3>
                     </a>
                   </li>
+
 
                 </ul>
               </div>
