--- a/index.html
+++ b/index.html
@@ -84,21 +84,16 @@
 <body>
 
   <div id="contentswrap">
-
   <!-- toggle -->
     <label class="toggle toggle_menu" for="toggle">toggle</label>
     <!-- nav -->
     <input id="toggle" type="checkbox" />
     <nav id="main_nav_wrap">
       <!-- 메인메뉴 -->
-      <!-- HOME BUTTON -->
-      <h1 class="myname nav_logo">
-        <a href="index.html">JISUN KIM</a>
-      </h1>
       <ul id="main_nav">
         <li>
           <h3>
-            <a href="javascript:void(0)">HOME</a>
+            <a href="index.html">HOME</a>
           </h3>
         </li>
         <li>
@@ -119,7 +114,7 @@
         </li>
         <li>
           <h3>
-            <a href="javascript:void(0)">ABOUT ME</a>
+            <button onclick="aboutme()">ABOUT ME</button>
           </h3>
         </li>
         <li>
@@ -136,7 +131,7 @@
         </li>
         <li>
           <h3>
-            <a href="javascript:void(0)">CONTACT</a>
+            <button onclick="contact()">CONTACT</button>
           </h3>
         </li>
       </ul>
